# edp

./: Cargo.toml  README.md  license
examples/: binance.rs
src/: binance.rs  binance_old.rs  error.rs  exchange_old.rs  hbdm.rs  indicator.rs  lib.rs  model.rs  model_old.rs  traits.rs  utils.rs
src/binance/: mod.rs  perpetual.rs  perpetual_test.rs  spot.rs
src/rest/: binance.rs  binance_futures.rs  binance_spot.rs  mod.rs  rclient.rs
src/ws/: mod.rs  wclient.rs
