[package]
name = "edp"
version = "0.1.0"
authors = ["ddde <dd>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
serde = { version ="1.0", features = ["derive"]}
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"]}
log = "0.4"
url = "2"
hex = "0.4"
ring = "0.16"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
async-trait = "0.1.30"
# thiserror = "1.0.16"
anyhow = "1.0"